QuaternionsManeuverOptimization/errorReport_20230121T152041.txt
Report generated on: 21-Jan-2023 15:20:41

Error message:
C:\Users\ido12\Documents\MATLAB\Projects\Thesis\Model\QuaternionsManeuverOptimization\fm_models\OptimalManeuver\cpp\mb_OptimalManeuver_CALL.cpp: In function 'void mexFunction(int, mxArray**, int, const mxArray**)':
C:\Users\ido12\Documents\MATLAB\Projects\Thesis\Model\QuaternionsManeuverOptimization\fm_models\OptimalManeuver\cpp\mb_OptimalManeuver_CALL.cpp:521:9: error: cannot convert 'double*' to 'creal_T*' for argument '5' to 'void mb_OptimalManeuver(const double*, const double*, double*, double*, creal_T*, creal_T*)'
         );
         ^


Error stack:
   - Stack error no. 1: in DerivativeCoder.Compile at 0
   - Stack error no. 2: in DerivativeCoder.Run at 0
   - Stack error no. 3: in BaseBuilder.Build at 0
   - Stack error no. 4: in main at 99

Falcon version information:
    - Release: v1.27
    - Series: main
    - Number: 1.27
    - Build: v1.27_3a392cfc_public

Release information:
    - Used Matlab Version:              9.10.0.1602886 (R2021a)
    - Used Matlab Version Release Date: February 17, 2021

Installed Toolboxes:
    - "Aerospace Blockset" as Version "5.0"
    - "Aerospace Toolbox" as Version "4.0"
    - "Control System Toolbox" as Version "10.10"
    - "Curve Fitting Toolbox" as Version "3.5.13"
    - "GUI Layout Toolbox" as Version "2.3.1"
    - "MATLAB" as Version "9.10"
    - "MATLAB Coder" as Version "5.2"
    - "Optimization Toolbox" as Version "9.1"
    - "Simulink" as Version "10.3"
    - "Symbolic Math Toolbox" as Version "8.7"

Basic FALCON.m toolboxes installed and licensed:
   - MATLAB Coder..............Installed
   - MATLAB Coder..............Licensed
   - Symbolic Math Toolbox.....Installed
   - Symbolic Math Toolbox.....Licensed

Compiler:
    - Selected C Compiler:   "MinGW64 Compiler (C)"
    - Selected C++ Compiler: "MinGW64 Compiler (C++)"

